Add Discussion code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- p - tag is used to create paragraph -->
 
 				<p>
-					Hi! My name is Aisiah and I love Taylor Swift
+					Hi! My name is Aisiah and I am looking for a Jr. Web Developer position
 				</p>
 			
 				<!-- img tag - it is used to add image in our page -->
@@ -55,7 +55,7 @@
 				<img src="./images/toga.jpg" id = "profile" class="img-fluid">
 
 				<!-- a or anchor is used to add hyperlink in our page -->
-				<a href= "mailto:aisantiago@gbox.adnu.edu.ph" class="btn-info btn-lg mt-5"> Hire me! </a>
+				<a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton" class="btn-info btn-lg mt-5"> Hire me! </a>
 
 			</section>
 
@@ -74,21 +74,14 @@
 			</a>
 
 			<!-- Twitter -->
-			<a href="https://x.com/" target="blank"> 
-				<i class="fa-brands fa-twitter"></i>
+			<a href="https://www.linkedin.com/in/aisiah-b-santiago-788a6530a/" target="blank"> 
+				<i class="fa-brands fa-linkedin"></i>
 			</a>
 
-			<a href="" target="blank">
-                <i class="fa-brands fa-instagram"></i>
+			<a href="https://github.com/Aisiahhh" target="blank">
+                <i class="fa-brands fa-github"></i>
             </a>
-
-            <a href="" target="blank">
-                <i class="fa-brands fa-tiktok"></i>
-            </a>
-
-            <a href="" target="blank">
-                <i class="fa-brands fa-youtube"></i>
-            </a>
+            
 		</footer>
 
 	</body>
