Added more functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<!-- google font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.gstatic	.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet">
 
 		<!-- Bootstrap -->
@@ -44,18 +44,7 @@
 				<!-- h1 - headings tag - it is used to create headings or title in our page -->
 				<h1> Full Stack Web Developer </h1>
 
-				<!-- p - tag is used to create paragraph -->
-
-				<p>
-					Hi! My name is Aisiah and I am looking for a Jr. Web Developer position
-				</p>
-			
-				<!-- img tag - it is used to add image in our page -->
-				<!-- src attribute - soruce, wherein it will tell us which image to use in page -->
-				<img src="./images/toga.jpg" id = "profile" class="img-fluid">
-
-				<!-- a or anchor is used to add hyperlink in our page -->
-				<a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton" class="btn-info btn-lg mt-5"> Hire me! </a>
+				
 
 			</section>
 
@@ -64,6 +53,10 @@
 		<!-- Footer -  -->
 		<footer>
 			<!-- Website -->
+			<a href="./works.html" target="blank">
+				<i class="fa-regular fa-file"></i>
+			</a>
+
 			<a href="https://zuitt.co/?referral=2402-org-ali" target="blank"> 
 				<i class="fa-solid fa-globe"></i>
 			</a>
