--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
 				<!-- h1 - headings tag - it is used to create headings or title in our page -->
 				<h1> Full Stack Web Developer </h1>
 
-				
+				<!-- p - tag is used to create paragraph -->
+
+				<p>
+					Hi! My name is Aisiah and I am looking for a Jr. Web Developer position
+				</p>
+			
+				<!-- img tag - it is used to add image in our page -->
+				<!-- src attribute - soruce, wherein it will tell us which image to use in page -->
+				<img src="./images/toga.jpg" id = "profile" class="img-fluid">
+
+				<!-- a or anchor is used to add hyperlink in our page -->
+				<a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton" class="btn-info btn-lg mt-5"> Hire me! </a>
 
 			</section>
 
