Adjusted index.html

--- a/works.html
+++ b/works.html
@@ -89,7 +89,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Calculator</h5>
                         <p class="card-text">A calculator for basic Math. I used HTML, CSS, Bootstrap, and JavaScript.</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Go to Calculator</a>
+                        <a href="https://aisiahhh.github.io/SimpleCalculator/" target="_blank" class="btn btn-primary">Go to Calculator</a>
                     </div>
                 </div>
             </div>
