--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
 
 	<!-- body - it contains the element that will be shown on our page -->
 	<body>
+		<nav class="navbar navbar-expand-lg" style="background-color: rgba(255, 255, 255, 0.1);">
+		    <div class="container-fluid">
+		        <div class="d-flex justify-content-start">
+		            <a class="navbar-brand" href="./index.html">
+		                <h2> Home </h2>
+		            </a>
+		            <ul class="navbar-nav me-auto">
+		                <li class="nav-item mt-1">
+		                    <a class="nav-link" href="./aboutme.html">
+		                    	<h4> About Me </h4>
+		                    </a>
+		                </li>
+		                <li class="nav-item mt-1">
+		                    <a class="nav-link" href="./works.html">
+		                    	<h4>
+		                    		Accomplishments
+		                    	</h4>
+		                    </a>
+		                </li>
+		            </ul>	
+		        </div>
+		        <a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton"> 
+		        	<button class="btn-info btn-lg"> 
+		        			Hire me! 
+		        	</button>
+		        </a>
+		    </div>
+		</nav>
+
+
 
 		<!-- div is used to create a wrapper or container for layouts -->
 		<!-- class is an html attribute -->
@@ -40,22 +70,19 @@
 
 			<!-- section is the same with the div tag but sections tag is semantic-->
 			<section id = "landing" class="text-center mt-5">
-
-				<!-- h1 - headings tag - it is used to create headings or title in our page -->
 				<h1> Full Stack Web Developer </h1>
+				<!-- h1 - headings tag - it is used to create headings or title in our page -->
+				<h2> Aisiah Santiago </h2>
 
 				<!-- p - tag is used to create paragraph -->
 
 				<p>
-					Hi! My name is Aisiah and I am looking for a Jr. Web Developer position
+					Hi! I am looking for a Jr. Web Developer position
 				</p>
 			
 				<!-- img tag - it is used to add image in our page -->
 				<!-- src attribute - soruce, wherein it will tell us which image to use in page -->
 				<img src="./images/toga.jpg" id = "profile" class="img-fluid">
-
-				<!-- a or anchor is used to add hyperlink in our page -->
-				<a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton" class="btn-info btn-lg mt-5"> Hire me! </a>
 
 			</section>
 
@@ -64,11 +91,7 @@
 		<!-- Footer -  -->
 		<footer>
 			<!-- Website -->
-			<a href="./works.html" target="blank">
-				<i class="fa-regular fa-file"></i>
-			</a>
-
-			<a href="https://zuitt.co/?referral=2402-org-ali" target="blank"> 
+			<a href="https://aisiahhh.github.io/fcbportfolio/" target="blank"> 
 				<i class="fa-solid fa-globe"></i>
 			</a>
 
