--- a/works.html
+++ b/works.html
@@ -21,6 +21,36 @@
 </head>
 <body>
 
+        <nav class="navbar navbar-expand-lg" style="background-color: rgba(255, 255, 255, 0.1);">
+            <div class="container-fluid">
+                <div class="d-flex justify-content-start">
+                    <a class="navbar-brand" href="./index.html">
+                        <h2>Home</h2>
+                    </a>
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item mt-1">
+                            <a class="nav-link" href="./aboutme.html">
+                                <h4> About Me </h4>
+                            </a>
+                        </li>
+                        <li class="nav-item mt-1">
+                            <a class="nav-link" href="./works.html">
+                                <h4>
+                                    Accomplishments
+                                </h4>
+                            </a>
+                        </li>
+                    </ul>
+                    
+                </div>
+                <a href= "mailto:aisantiago@gbox.adnu.edu.ph" id = "hireButton"> 
+		        	<button class="btn-info btn-lg"> 
+		        			Hire me! 
+		        	</button>
+		        </a>
+            </div>
+        </nav>
+
 <div class="container-fluid">
     <section id="landing" class="text-center mt-5">
         <h1>Full Stack Web Developer</h1>
@@ -110,14 +140,10 @@
 </div>
 
 <footer class="text-center mt-5">
-    <a href="./works.html" target="_blank"><i class="fa-regular fa-file"></i></a>
-    <a href="https://zuitt.co/?referral=2402-org-ali" target="_blank"><i class="fa-solid fa-globe"></i></a>
+    <a href="https://aisiahhh.github.io/fcbportfolio/" target="_blank"><i class="fa-solid fa-globe"></i></a>
     <a href="https://www.facebook.com/aisiah.santiago" target="_blank"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.linkedin.com/in/aisiah-b-santiago-788a6530a/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     <a href="https://github.com/Aisiahhh" target="_blank"><i class="fa-brands fa-github"></i></a>
 </footer>
-
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
