--- a/aboutme.html
+++ b/aboutme.html
@@ -82,7 +82,7 @@
                     <!-- Card 3 -->
                     <div class="card shadow-sm mb-4">
                         <div class="card-header bg-success text-white text-center">
-                            <h1 class="mb-0">Services Offered</h1>
+                            <h1 class="mb-0">Services I can Offered</h1>
                         </div>
                         <div class="card-body">
                             <ul class="list-group list-group-flush">
